[gd_scene load_steps=7 format=3 uid="uid://55v5vcl1nnyx"]

[ext_resource type="Script" path="res://Scripts/WeaponScripts/bow/bow_bullet.gd" id="1_eoxfc"]
[ext_resource type="Texture2D" uid="uid://lel1ebrmufag" path="res://art/1bitpack_kenney/Tilesheet/monochrome_transparent.png" id="2_51f2i"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hai6f"]
radius = 2.0
height = 12.0

[sub_resource type="AtlasTexture" id="AtlasTexture_b4gtl"]
atlas = ExtResource("2_51f2i")
region = Rect2(141, 462, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_yx6qw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4gtl")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e0mcr"]
radius = 2.0
height = 6.0

[node name="RigidBody2D" type="RigidBody2D"]
collision_layer = 256
collision_mask = 16
mass = 999.0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_eoxfc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_hai6f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 0.785398
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_yx6qw")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_e0mcr")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_releaseSelf"]
[connection signal="body_entered" from="Area2D" to="." method="_on_bullet_hit"]
